--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "is-notification",
   "version": "1.0.1",
   "main": "index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --config webpack.dev.conf.js",
