--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "is-notification",
-  "version": "1.7.9",
-  "main": "dist/index.js",
+  "version": "2.0.0",
+  "main": "index.js",
   "files": [
     "dist",
-    "lib",
     "index.js"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --config webpack.dev.conf.js",
-    "build": "webpack --config webpack.prod.conf.js",
+    "build": "npm run clean && webpack --config webpack.prod.conf.js",
+    "clean": "rimraf dist/*",
     "sass": "node-sass style/index.scss dist/index.css",
     "postsass": "postcss dist/index.css --use autoprefixer -m -o dist/index.css",
     "style": "npm run sass && cssnano dist/index.css dist/index.min.css --no-zindex --no-reduceIdents"
@@ -60,6 +60,7 @@
     "@babel/polyfill": "^7.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "rimraf": "^2.6.3"
   }
 }
