--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@babel/polyfill": "^7.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-transition-group": "^4.0.1",
     "reactstrap": "^8.0.0",
     "rimraf": "^2.6.3"
   }
