--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.1.0",
     "@babel/polyfill": "^7.0.0",
+    "bootstrap": "^4.5.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-transition-group": "^4.0.1",
+    "reactstrap": "^8.6.0",
     "rimraf": "^2.6.3"
   }
 }
