--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "is-notification",
-  "version": "2.0.2",
+  "name": "@zq/react-ui",
+  "version": "3.0.0",
   "main": "index.js",
   "files": [
     "dist",
@@ -45,13 +45,16 @@
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^1.2.1",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^5.0.3",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
