--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --config webpack.dev.conf.js",
-    "build": "npm run clean && webpack --config webpack.prod.conf.js",
-    "clean": "rimraf dist/*",
+    "build": "npm run clean && webpack --config webpack.prod.conf.js && gulp",
+    "clean": "rimraf dist/* es/*",
     "sass": "node-sass style/index.scss dist/index.css",
     "postsass": "postcss dist/index.css --use autoprefixer -m -o dist/index.css",
     "style": "npm run sass && cssnano dist/index.css dist/index.min.css --no-zindex --no-reduceIdents"
@@ -39,15 +39,27 @@
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^10.0.1",
     "babel-loader": "^8.0.2",
     "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^9.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^1.2.1",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^5.0.3",
@@ -62,10 +74,18 @@
     "@babel/plugin-proposal-decorators": "^7.1.0",
     "@babel/polyfill": "^7.0.0",
     "bootstrap": "^4.5.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "react-transition-group": "^4.0.1",
     "reactstrap": "^8.6.0",
     "rimraf": "^2.6.3"
-  }
+  },
+  "peerDependencies": {
+    "react": ">=16.14.0",
+    "react-dom": ">=16.14.0"
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "not IE_Mob 11",
+    "maintained node versions"
+  ]
 }
