--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --config webpack.dev.conf.js",
+    "start": "webpack serve --open --config webpack.dev.conf.js",
     "build": "npm run clean && webpack --config webpack.prod.conf.js && gulp",
     "clean": "rimraf dist/* es/*",
     "sass": "node-sass style/index.scss dist/index.css",
@@ -37,20 +37,20 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.1.0",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^10.0.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "autoprefixer": "^10.2.3",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.2",
+    "babel-loader": "^8.2.2",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.22.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
@@ -58,28 +58,28 @@
     "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^1.2.1",
-    "node-sass": "^4.12.0",
+    "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.4",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^5.0.3",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.1"
+    "terser-webpack-plugin": "^5.1.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.16.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/polyfill": "^7.0.0",
-    "bootstrap": "^4.5.3",
-    "react-transition-group": "^4.0.1",
-    "reactstrap": "^8.6.0",
+    "bootstrap": "^4.6.0",
+    "react-transition-group": "^4.4.1",
+    "reactstrap": "^8.9.0",
     "rimraf": "^2.6.3"
   },
   "peerDependencies": {
