--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^5.1.1",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.16.0",
     "webpack-cli": "^4.4.0",
