--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.dev.conf.js",
+    "buildDev": "npm run clean && webpack --config webpack.dev.conf.js",
     "build": "npm run clean && webpack --config webpack.prod.conf.js && gulp",
     "clean": "rimraf dist/* es/*",
     "sass": "node-sass style/index.scss dist/index.css",
@@ -80,6 +81,7 @@
     "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/polyfill": "^7.0.0",
     "bootstrap": "^4.6.0",
+    "gulp-base64": "^0.1.3",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.9.0",
     "rimraf": "^2.6.3"
